<resources>
    <string name="app_name" translatable="false">StoRe</string>
    <string name="preference_file_key" translatable="false">io.github.storeagereloaded.android</string>
    <string name="preferences_session_id" translatable="false">session_id</string>
    <string name="preferences_server_address" translatable="false">server_address</string>
    
    <!-- Main Activity -->
    <string name="no_database_text">There is no database to show here. You can create a new one here or in the nav menu on the left.</string>
    <string name="no_database_button">Create Database</string>
    <string name="fab_add_item">Add Item</string>

    <!-- Main Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_app">StoRe</string>
    <string name="nav_header_server">Server Address</string>
    <string name="nav_header_title">Selected Database</string>
    <string name="nav_header_subtitle">%1$d Entries</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_database_new">New Database</string>
    <string name="nav_database_select">Select Database</string>
    <string name="nav_tags">Tags</string>
    <string name="nav_locations">Locations</string>
    <string name="nav_account">Account</string>
    <string name="nav_account_manage">Manage Account</string>
    <string name="nav_account_logout">Log out</string>
    <string name="nav_app">App</string>
    <string name="nav_app_settings">Settings</string>

    <!-- Main Action Menu -->
    <string name="action_search">Search</string>
    <string name="action_scanner">Code Scanner</string>

    <!-- App Settings Activity -->
    <string name="title_activity_app_settings">App Settings</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Login</string>
    <string name="server_address">Server Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="server_check">Calling your Server...</string>
    <string name="credential_check">Logging in...</string>
    <string name="server_error">Your server wasn\'t found</string>
    <string name="wrong_credentials">Username or Password was wrong</string>

    <!-- Database List Activity -->
    <string name="title_activity_database_list">Select Database</string>
    <string name="database_settings">Database Settings</string>

    <!-- Database Settings Activity -->
    <string name="title_activity_database_settings">Database Settings</string>
    <string name="database_name">Database Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="unsaved_dialog_title">Do you really want to leave?</string>
    <string name="unsaved_dialog_description">Some unsaved changes will be lost.</string>

    <!-- Item View Activity -->
    <string name="edit">Edit</string>
    <string name="delete_item">Delete Item</string>
    <string name="amount">Amount</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="ean13">EAN13</string>
    <string name="created">Created</string>
    <string name="last_edited">Last edited</string>

    <!-- Item Edit Activity -->
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add_tag">Add tag</string>

    <!-- Tag List Activity -->
    <string name="title_activity_tag_list">Tags</string>
    <string name="edit_tag">Edit Tag</string>

    <!-- Tag Edit Activity -->
    <string name="title_activity_tag_edit">Edit Tag</string>
    <string name="tag_name">Tag Name</string>

    <!-- Location List Activity -->
    <string name="title_activity_location_list">Locations</string>
    <string name="fab_add_location">Add Location</string>

    <!-- Location Edit Activity -->
    <string name="title_activity_location_edit">Edit Location</string>
    <string name="location_name">Location Name</string>
    <string name="database">Database</string>
</resources>