<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_database_new"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/nav_database_new" />
    <item
        android:id="@+id/nav_database_select"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/nav_database_select" />
    <item
        android:id="@+id/nav_database_tags"
        android:icon="@drawable/ic_baseline_label_24"
        android:title="@string/nav_tags" />
    <item
        android:id="@+id/nav_database_locations"
        android:icon="@drawable/ic_baseline_place_24"
        android:title="@string/nav_locations" />

    <item android:title="@string/nav_app">
        <menu>
            <item
                android:id="@+id/nav_app_settings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/nav_app_settings" />
        </menu>
    </item>
    <item android:title="@string/nav_account">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_baseline_person_24"
                android:title="@string/nav_account_manage"
                android:visible="false" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/nav_account_logout" />
        </menu>
    </item>
</menu>