<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nav_header_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nav_header_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_app"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textColor="@color/material_on_primary_emphasis_high_type" />

            <TextView
                android:id="@+id/nav_header_server"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_server"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/material_on_primary_emphasis_medium" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/nav_header_database_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/material_on_primary_emphasis_high_type" />

    <TextView
        android:id="@+id/nav_header_database_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textAppearance="?attr/textAppearanceSubtitle2"
        android:textColor="@color/material_on_primary_emphasis_medium" />
</LinearLayout>