<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_item_view_activity"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="270dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                    android:textColor="@color/material_on_background_emphasis_high_type"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/material_on_background_emphasis_medium"
                    tools:text="Description" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <HorizontalScrollView
                android:id="@+id/chips_scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chips"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:singleLine="true" />

                </FrameLayout>

            </HorizontalScrollView>

            <View
                android:id="@+id/chips_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                tools:listitem="@layout/list_item_attribute" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="16dp"
                        android:text="@string/created"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        app:drawableStartCompat="@drawable/ic_baseline_add_24"
                        app:drawableTint="@color/material_on_background_emphasis_high_type" />

                    <TextView
                        android:id="@+id/created"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/material_on_background_emphasis_medium"
                        tools:text="A long time ago in a galaxy far away" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:drawablePadding="16dp"
                        android:text="@string/last_edited"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/material_on_background_emphasis_high_type"
                        app:drawableStartCompat="@drawable/ic_baseline_edit_24"
                        app:drawableTint="@color/material_on_background_emphasis_high_type" />


                    <TextView
                        android:id="@+id/last_edited"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@color/material_on_background_emphasis_medium"
                        tools:text="A long time ago in a galaxy far away" />

                </TableRow>

            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/edit"
        app:icon="@drawable/ic_baseline_edit_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>